--- a/TP1/CC-TP1-PL26.tex
+++ b/TP1/CC-TP1-PL26.tex
@@ -13,7 +13,9 @@
 \usepackage{float}
 \usepackage{fancyvrb}
 \usepackage{amsmath}
+\usepackage{array}
 %\renewcommand{\baselinestretch}{1.5}
+
 
 \begin{document}
 \mainmatter
@@ -37,5 +39,41 @@ PL2, Grupo 6
 \maketitle
 
 \section{Questão 1}
+
+
+
+\begin{center}
+\begin{tabular}{ | m{3cm} | m{3cm} | m{3cm} | m{3cm} | m{3cm} |}
+\hline
+ \textbf{Comando usado (aplicação)} & \textbf{Protocolo de Aplicação(se aplicável)} & \textbf{Protocolo de transporte(se aplicável)} & \textbf{Porta de atendimento(se aplicável)} & \textbf{Overhead de transporte em bytes(se aplicável)} \\
+ \hline
+ \textbf{Ping} &  &  &  &  \\
+ \hline
+ \textbf{traceroute} &  &  &  &  \\
+ \hline
+ \textbf{telnet} &  &  &  &  \\
+ \hline
+ \textbf{ftp} &  &  &  &  \\
+ \hline
+ \textbf{Tftp} &  &  &  &  \\
+ \hline
+ \textbf{browser/http} &  &  &  &  \\
+ \hline
+ \textbf{nslookup} &  &  &  &  \\
+ \hline
+ \textbf{ssh} &  &  &  &  \\
+ \hline
+ \textbf{Outras:} &  &  &  &  \\
+ \hline
+\end{tabular}
+\end{center}
+
+
+
+\section{Questão 2}
+
+\section{Questão 3}
+
+\section{Questão 4}
 
 \end{document}
