--- a/TP1/CC-TP1-PL26.tex
+++ b/TP1/CC-TP1-PL26.tex
@@ -47,21 +47,21 @@ PL2, Grupo 6
 \hline
  \textbf{Comando usado (aplicação)} & \textbf{Protocolo de Aplicação(se aplicável)} & \textbf{Protocolo de transporte(se aplicável)} & \textbf{Porta de atendimento(se aplicável)} & \textbf{Overhead de transporte em bytes(se aplicável)} \\
  \hline
- \textbf{Ping} &  &  &  &  \\
+ \textbf{Ping} & -------------------------- & -------------------------- & -------------------------- & -------------------------- \\
  \hline
  \textbf{traceroute} &  &  &  &  \\
  \hline
- \textbf{telnet} &  &  &  &  \\
+ \textbf{telnet} & DNS & UDP/TCP &  &  \\
  \hline
- \textbf{ftp} &  &  &  &  \\
+ \textbf{ftp} &  & TCP & 21 & 32 \\
  \hline
- \textbf{Tftp} &  &  &  &  \\
+ \textbf{Tftp} &  & UDP & 69 & 22 \\
  \hline
- \textbf{browser/http} &  &  &  &  \\
+ \textbf{browser/http} &  & TCP & 80 & 32 \\
  \hline
- \textbf{nslookup} &  &  &  &  \\
+ \textbf{nslookup} & DNS & UDP & 53 & 47 \\
  \hline
- \textbf{ssh} &  &  &  &  \\
+ \textbf{ssh} &  & TCP & 22 & 32 \\
  \hline
  \textbf{Outras:} &  &  &  &  \\
  \hline
@@ -75,5 +75,7 @@ PL2, Grupo 6
 \section{Questão 3}
 
 \section{Questão 4}
+
+\section{Conclusões}
 
 \end{document}
