--- a/TP1/CC-TP1-PL26.tex
+++ b/TP1/CC-TP1-PL26.tex
@@ -40,8 +40,6 @@ PL2, Grupo 6
 
 \section{Questão 1}
 
-
-
 \begin{center}
 \begin{tabular}{ | m{3cm} | m{3cm} | m{3cm} | m{3cm} | m{3cm} |}
 \hline
@@ -49,30 +47,51 @@ PL2, Grupo 6
  \hline
  \textbf{Ping} & -------------------------- & -------------------------- & -------------------------- & -------------------------- \\
  \hline
- \textbf{traceroute} &  &  &  &  \\
+ \textbf{traceroute} & -------------------------- & -------------------------- & -------------------------- & -------------------------- \\
  \hline
- \textbf{telnet} & DNS & UDP/TCP &  &  \\
+ \textbf{telnet} & Telnet & TCP & 23 & 20 \\
  \hline
- \textbf{ftp} &  & TCP & 21 & 32 \\
+ \textbf{ftp} & FTP & TCP & 21 & 32 \\
  \hline
- \textbf{Tftp} &  & UDP & 69 & 22 \\
+ \textbf{Tftp} & TFTP & UDP & 69 & 22 \\
  \hline
- \textbf{browser/http} &  & TCP & 80 & 32 \\
+ \textbf{browser/http} & HTTP & TCP & 80 & 32 \\
  \hline
  \textbf{nslookup} & DNS & UDP & 53 & 47 \\
  \hline
- \textbf{ssh} &  & TCP & 22 & 32 \\
- \hline
- \textbf{Outras:} &  &  &  &  \\
+ \textbf{ssh} & SSH & TCP & 22 & 32 \\
  \hline
 \end{tabular}
 \end{center}
 
+\subsection{Ping}
+
+\subsection{Traceroute}
+
+\subsection{Telnet}
+
+\subsection{FTP}
+
+\subsection{TFTP}
+
+\subsection{HTTP}
+
+\subsection{Nslookup/DNS}
+
+\subsection{SSH}
 
 
 \section{Questão 2}
 
 \section{Questão 3}
+\subsection{(i) uso da camada de transporte}
+
+\subsection{(ii) eficiência na transferência}
+
+\subsection{(iii) complexidade}
+
+\subsection{(iv) segurança}
+
 
 \section{Questão 4}
 
