--- a/TP1/CC-TP1-PL26.tex
+++ b/TP1/CC-TP1-PL26.tex
@@ -69,10 +69,10 @@ PL2, Grupo 6
 
 \begin{figure}[H]
 \begin{center}
-\includegraphics[scale=0.4]{ping.png} 
+\includegraphics[scale=0.4]{ping.png}
 \end{center}
 \caption{\label{fig:ping}Captura realizada aquando a realização do comando \emph{ping}.}
-\end{figure} 
+\end{figure}
 
 Como possível reparar na figura \ref{fig:ping}, o comando \emph{ping} apenas utiliza \textbf{ICMP} pelo que atua praticamente apenas no nível de rede, daí as nossas escolhas aquando do preenchimento do quadro.
 
@@ -81,10 +81,10 @@ Como possível reparar na figura \ref{fig:ping}, o comando \emph{ping} apenas ut
 
 \begin{figure}[H]
 \begin{center}
-\includegraphics[scale=0.4]{traceroute.png} 
+\includegraphics[scale=0.4]{traceroute.png}
 \end{center}
 \caption{\label{fig:traceroute}Captura realizada aquando a realização do comando \emph{traceroute}.}
-\end{figure} 
+\end{figure}
 
 Como possível reparar na figura \ref{fig:traceroute}, o comando \emph{traceroute}, tal como o \emph{ping}, apenas utiliza \textbf{ICMP} pelo que atua praticamente apenas no nível de rede, daí as nossas escolhas aquando do preenchimento do quadro.
 
@@ -93,10 +93,10 @@ Como possível reparar na figura \ref{fig:traceroute}, o comando \emph{tracerout
 
 \begin{figure}[H]
 \begin{center}
-\includegraphics[scale=0.4]{telnet.png} 
+\includegraphics[scale=0.4]{telnet.png}
 \end{center}
 \caption{\label{fig:telnet}Captura realizada aquando a realização do comando \emph{telnet}.}
-\end{figure} 
+\end{figure}
 
 A figura \ref{fig:telnet}, representa um Frame capturado que contém um cabeçalho referente à aplicação \textbf{Telnet}. Deste modo na camada de transporte (TCP) conseguimos identificar a porta de atendimento bem como o overhead de transporte em bytes, que se encontram a sublinhado na figura \ref{fig:telnet}.
 
@@ -105,10 +105,10 @@ A figura \ref{fig:telnet}, representa um Frame capturado que contém um cabeçal
 
 \begin{figure}[H]
 \begin{center}
-\includegraphics[scale=0.4]{ftp.png} 
+\includegraphics[scale=0.4]{ftp.png}
 \end{center}
 \caption{\label{fig:ftp}Captura realizada aquando a utilização do protocolo \emph{FTP}.}
-\end{figure} 
+\end{figure}
 
 A figura \ref{fig:ftp}, representa um Frame capturado que contém um cabeçalho referente à aplicação \textbf{FTP}. Deste modo na camada de transporte (TCP) conseguimos identificar a porta de atendimento bem como o overhead de transporte em bytes, que se encontram a sublinhado na figura \ref{fig:ftp}.
 
@@ -117,10 +117,10 @@ A figura \ref{fig:ftp}, representa um Frame capturado que contém um cabeçalho 
 
 \begin{figure}[H]
 \begin{center}
-\includegraphics[scale=0.4]{tftp.png} 
+\includegraphics[scale=0.4]{tftp.png}
 \end{center}
 \caption{\label{fig:tftp}Captura realizada aquando a utilização do protocolo \emph{TFTP}.}
-\end{figure} 
+\end{figure}
 
 A figura \ref{fig:tftp}, representa um Frame capturado que contém um cabeçalho referente à aplicação \textbf{FTP}. Deste modo na camada de transporte (UDP) conseguimos identificar a porta de atendimento bem como o overhead de transporte em bytes, que se encontram a sublinhado na figura \ref{fig:ftp}.
 
@@ -129,10 +129,10 @@ A figura \ref{fig:tftp}, representa um Frame capturado que contém um cabeçalho
 
 \begin{figure}[H]
 \begin{center}
-\includegraphics[scale=0.4]{http.png} 
+\includegraphics[scale=0.4]{http.png}
 \end{center}
 \caption{\label{fig:http}Captura realizada aquando a utilização do protocolo \emph{HTTP}.}
-\end{figure} 
+\end{figure}
 
 A figura \ref{fig:http}, representa um Frame capturado que contém um cabeçalho referente à aplicação \textbf{HTTP}. Deste modo na camada de transporte (TCP) conseguimos identificar a porta de atendimento bem como o overhead de transporte em bytes, que se encontram a sublinhado na figura \ref{fig:ftp}.
 
@@ -145,15 +145,31 @@ A figura \ref{fig:http}, representa um Frame capturado que contém um cabeçalho
 
 \begin{figure}[H]
 \begin{center}
-\includegraphics[scale=0.4]{ssh.png} 
+\includegraphics[scale=0.4]{ssh.png}
 \end{center}
 \caption{\label{fig:ssh}Captura realizada aquando a utilização do protocolo \emph{SSH}.}
-\end{figure} 
+\end{figure}
 
 A figura \ref{fig:ssh}, representa um Frame capturado que contém um cabeçalho referente à aplicação \textbf{SSH}. Deste modo na camada de transporte (TCP) conseguimos identificar a porta de atendimento bem como o overhead de transporte em bytes, que se encontram a sublinhado na figura \ref{fig:ssh}.
 
 
 \section{Questão 2}
+
+Nas duas figuras seguintes, o endereço 10.1.1.1 identifica o Servidor1 da LAN1, e o endereço 10.4.4.1 identifica o Cliente1, host da LAN4 da topologia em causa.
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.45]{2_ftp.png}
+\end{center}
+\caption{\label{fig:ssh}Diagrama temporal das transferências do file1 por FTP.}
+\end{figure}
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.45]{2_tftp.png}
+\end{center}
+\caption{\label{fig:ssh}Diagrama temporal das transferências do file1 por TFTP.}
+\end{figure}
 
 \section{Questão 3}
 \subsection{(i) uso da camada de transporte}
