--- a/TP1/CC-TP1-PL26.tex
+++ b/TP1/CC-TP1-PL26.tex
@@ -155,20 +155,20 @@ A figura \ref{fig:ssh}, representa um Frame capturado que contém um cabeçalho 
 
 \section{Questão 2}
 
-Nas duas figuras seguintes, o endereço 10.1.1.1 identifica o Servidor1 da LAN1, e o endereço 10.4.4.1 identifica o Cliente1, host da LAN4 da topologia em causa.
+Nas duas figuras seguintes, o endereço \textbf{10.1.1.1} identifica o \textbf{Servidor1} da LAN1, e o endereço \textbf{10.4.4.1} identifica o \textbf{Cliente1}, host da LAN4 da topologia em causa.
 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.45]{2_ftp.png}
 \end{center}
-\caption{\label{fig:ssh}Diagrama temporal das transferências do file1 por FTP.}
+\caption{\label{fig:ssh}Diagrama temporal das transferências do file1 por \textbf{FTP}.}
 \end{figure}
 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.45]{2_tftp.png}
 \end{center}
-\caption{\label{fig:ssh}Diagrama temporal das transferências do file1 por TFTP.}
+\caption{\label{fig:ssh}Diagrama temporal das transferências do file1 por \textbf{TFTP}.}
 \end{figure}
 
 \section{Questão 3}
