--- a/TP1/CC-TP1-PL26.tex
+++ b/TP1/CC-TP1-PL26.tex
@@ -193,6 +193,9 @@ Perante o observado, por exemplo na Questão 2, concluimos que a complexidade de
 
 
 \section{Questão 4}
+No protocolo de aplicação TFTP, quando a transferência é executada a partir do Cliente1 tudo ocorre sem erros. Quando tal é executada a partir do Alfa, a porta do destino fica inalcançável, significando isto que foi detetado algum erro ... (ANALISAR BEM O WIRESHARK, TENHO DUVIDAS DISTO)
+
+
 
 \section{Conclusões}
 
