--- a/TP1/CC-TP1-PL26.tex
+++ b/TP1/CC-TP1-PL26.tex
@@ -217,20 +217,28 @@ No protocolo de aplicação FTP, quando a transferência é executada a partir d
 \caption{\label{fig:ssh}Ocorrência de um duplicado via TCP.}
 \end{figure}
 
-No protocolo de aplicação HTTP, tanto na transferência para o Cliente1 como para Alfa acontecem bastantes inconvenientes. No Cliente 1: 
+No protocolo de aplicação HTTP, tanto na transferência para o Cliente1 como para Alfa acontecem bastantes inconvenientes. No Cliente 1:
 
 	- Alguns Fast Restransmit;
-	
+
 	- Alguns Out-of-Order;
-	
-No Alfa: 
+
+No Alfa:
 
 	- Tudo o que ocorre no Cliente1
-	
+
 	- Ocorre um RST, indica que a conexão TCP vai ser reinicializada.
 
 
 
 \section{Conclusões}
+
+Após a resolução deste Trabalho Prático foi facilmente reconhecível nos elementos do grupo um maior conhecimento sobre os  Protocolos da Camada de Aplicação, como por exemplo o HTTP e o FTP, e os Protocolos da Camada de Transporte, como por exemplo o TCP e o UDP.
+
+Além de características básicas como as portas de cada aplicação, tambem melhoramos capacidades para abordar transferências de ficheiros na rede, tendo sido visto em detalhe a complexidade e a segurança destas.
+
+A influência das ligações de rede nos níveis de Transporte e de Aplicação foi também bem abordada, em específico as situações de perda e de duplicação de pacotes.
+
+Finalizando, foi possível aplicar os conhecimentos adquiridos nas aulas teóricas e ter uma perceção mais pormenorizada de como todos estes processos se desenrolam a níveis mais práticos.
 
 \end{document}
