--- a/TP1/CC-TP1-PL26.tex
+++ b/TP1/CC-TP1-PL26.tex
@@ -235,9 +235,9 @@ No Alfa:
 
 Após a resolução deste Trabalho Prático foi facilmente reconhecível nos elementos do grupo um maior conhecimento sobre os  Protocolos da Camada de Aplicação, como por exemplo o HTTP e o FTP, e os Protocolos da Camada de Transporte, como por exemplo o TCP e o UDP.
 
-Além de características básicas como as portas de cada aplicação, tambem melhoramos capacidades para abordar transferências de ficheiros na rede, tendo sido visto em detalhe a complexidade e a segurança destas.
+Além de características básicas como as portas de cada aplicação, também melhoramos capacidades para abordar transferências de ficheiros na rede, tendo sido visto em detalhe a complexidade e a segurança destas.
 
-A influência das ligações de rede nos níveis de Transporte e de Aplicação foi também bem abordada, em específico as situações de perda e de duplicação de pacotes.
+Na última parte do trabalho prático foi bem explícita a influência da camada de rede, em todo o processo de comunicação em camadas superiores. Por muito bem implementadas que as camadas estejam estas estão fortemente dependentes das camadas inferiores que lhes fornecem serviços. Como consequência de tal facto, neste trabalho deparamo-nos com várias duplicações de segmentos e perdas também.
 
 Finalizando, foi possível aplicar os conhecimentos adquiridos nas aulas teóricas e ter uma perceção mais pormenorizada de como todos estes processos se desenrolam a níveis mais práticos.
 
