tp1 final a serio

--- a/TP1/CC-TP1-PL26.tex
+++ b/TP1/CC-TP1-PL26.tex
@@ -223,7 +223,7 @@ No protocolo de aplicação HTTP, tanto na transferência para o Cliente1 como p
 
 No Cliente 1:
 
-	- Alguns Fast Restransmit;
+	- Alguns Fast Retransmit;
 
 	- Alguns Out-of-Order;
 
