tp3 report questions

--- a/TP3/Report/CC-TP3-PL26.tex
+++ b/TP3/Report/CC-TP3-PL26.tex
@@ -82,4 +82,32 @@ Quanto aos domínios \textbf{pt.} e \textbf{.}, estes não possuem servidores de
 \end{figure}
 
 
+\subsection{\textbf{Existe o domínio eureka.software.? Será que eureka.software. é um host?}}
+\textbf{R:}
+
+
+\subsection{\textbf{Qual é o servidor DNS primário definido para o domínio ami.pt.? Este servidor primário (master) aceita queries
+recursivas? Porquê?}}
+\textbf{R:}
+
+
+\subsection{\textbf{Obtenha uma resposta "autoritativa" para a questão anterior.}}
+\textbf{R:}
+
+
+\subsection{\textbf{Onde são entregues as mensagens dirigidas a marcelo@presidencia.pt ? E a guterres@onu.org?}}
+\textbf{R:}
+
+
+\subsection{\textbf{Que informação é possível obter acerca de www.whitehouse.gov? Qual é o endereço IPv4 associado?}}
+\textbf{R:}
+
+
+\subsection{\textbf{Consegue interrogar o DNS sobre o endereço IPv6 2001:690:a00:1036:1113::247 usando algum dos clientes DNS? Que informação consegue obter? Supondo que teve problemas com esse endereço, consegue obter um contacto do responsável por esse IPv6?}}
+\textbf{R:}
+
+
+\subsection{\textbf{Os secundários usam um mecanismo designado por "Transferência de zona" para se atualizarem automaticamente a partir do primário, usando os parâmetros definidos no Record do tipo SOA do domínio. Descreve sucintamente esse mecanismo com base num exemplo concreto (ex: di.uminho.pt ou o domínio cc.pt que vai ser criado na topologia virtual).}}
+\textbf{R:}
+
 \end{document}
