palavra fora do sitio relatorio

--- a/TP3/Report/CC-TP3-PL26.tex
+++ b/TP3/Report/CC-TP3-PL26.tex
@@ -86,8 +86,7 @@ Quanto aos domínios \textbf{pt.} e \textbf{.}, estes não possuem servidores de
 \textbf{R:}
 
 
-\subsection{\textbf{Qual é o servidor DNS primário definido para o domínio ami.pt.? Este servidor primário (master) aceita queries
-recursivas? Porquê?}}
+\subsection{\textbf{Qual é o servidor DNS primário definido para o domínio ami.pt.? Este servidor primário (master) aceita queries recursivas? Porquê?}}
 \textbf{R:}
 
 
@@ -109,5 +108,6 @@ recursivas? Porquê?}}
 
 \subsection{\textbf{Os secundários usam um mecanismo designado por "Transferência de zona" para se atualizarem automaticamente a partir do primário, usando os parâmetros definidos no Record do tipo SOA do domínio. Descreve sucintamente esse mecanismo com base num exemplo concreto (ex: di.uminho.pt ou o domínio cc.pt que vai ser criado na topologia virtual).}}
 \textbf{R:}
+
 
 \end{document}
