--- a/TP3/Report/CC-TP3-PL26.tex
+++ b/TP3/Report/CC-TP3-PL26.tex
@@ -50,9 +50,16 @@ PL2, Grupo 6
 
 \begin{figure}[H]
 \begin{center}
-\includegraphics[scale=0.4]{1b.png}
+\includegraphics[scale=0.4]{1b1.png}
 \end{center}
-\caption{\label{fig:1b}Resultado da execução do comando \textbf{dig}}
+\caption{\label{fig:1b1}Resultado da execução do comando \textbf{dig}}
+\end{figure}
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.4]{1b2.png}
+\end{center}
+\caption{\label{fig:1b2}Resultado da execução do comando \textbf{dig}}
 \end{figure}
 
 \subsection{\textbf{Quais os servidores de nomes definidos para os domínios: "ccg.pt.", "pt." e "."?}}
